syntax = "proto3";

option go_package = "./user";

package user;

// 注册请求体
message RegisterReq {
  string phone = 1;
}
// 注册返回体
message RegisterResp {
  string code = 1;
  UserInfo result = 2;
}
// 登录/注册成功后返回的用户信息
message UserInfo {
}
// 登录注册相关服务
service Login {
  // 注册
  rpc register(RegisterReq) returns (RegisterResp);
}